--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "example-site/dragonfly-framework/plugins-inactive/db"]
 	path = example-site/dragonfly-framework/plugins-inactive/db
-	url = git@github.com:taoeffect/dragonfly-db.git
+	url = git://github.com/taoeffect/dragonfly-db.git
