--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-example-site/**/plugins-active/_config.lsp
+example-site/dragonfly-framework/plugins-active/*
+!example-site/dragonfly-framework/plugins-active/route_cgi.lsp
 *.log
-.hg
